[project]
name = "care-navigator-voice"
version = "0.1.0"
description = "Production-grade conversational health-navigation voice agent"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Schemas and settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    # LLM and orchestration
    "openai>=1.58.0",
    "langgraph>=0.2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Data pipeline
    "pandas>=2.2.0",
    "pandera>=0.21.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    # Observability
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
